// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Menu Left menu 1`] = `
<div
  align="flex-start"
  className="sc-jqUVSM sc-BeQoi gFyWwL iFaNR"
>
  <span
    className="sc-jOrMOR iPuprY"
    data-element="menuWrapper"
  >
    <button
      appearance="primary-ghost"
      className="sc-dkzDqf sc-gKXOVf eOixSn kXEJUw"
      data-element="button"
      onMouseUp={[Function]}
      size="medium"
      variant="medium"
    >
      Oxfd...586c
      <div
        className="sc-jqUVSM cKPcLS"
        gap={0.75}
      />
    </button>
  </span>
</div>
`;

exports[`Storyshots Components/Menu Right menu 1`] = `
<div
  align="flex-end"
  className="sc-jqUVSM sc-BeQoi gFyWwL gWcVEW"
>
  <span
    className="sc-jOrMOR iPuprY"
    data-element="menuWrapper"
  >
    <button
      appearance="primary-ghost"
      className="sc-dkzDqf sc-gKXOVf eJVGuX eVoEKu"
      data-element="button"
      icon="settings"
      onMouseUp={[Function]}
      size="medium"
      variant="medium"
    />
  </span>
</div>
`;
